--- a/about.html
+++ b/about.html
@@ -28,11 +28,11 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/iDesign.github.io/">Home</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item active">
           <a class="nav-link" href="/iDesign.github.io/about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/iDesign.github.io/contact.html">Contact Us</a>
+          <a class="nav-link" href="/iDesign.github.io/contactus.html">Contact Us</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
