--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
           <a class="nav-link" href="/iDesign.github.io/about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="/iDesign.github.io/contact.html">Contact Us</a>
+          <a class="nav-link active" href="/iDesign.github.io/contact us.html">Contact Us</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
