--- a/about.html
+++ b/about.html
@@ -101,10 +101,7 @@
 
 </div>
 
-<footer class="container">
-    <p class="float-end"><a href="#">Back to top</a></p>
-    <p>© 2021–2022 iDesign, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
-  </footer>
+<footer _ngcontent-serverapp-c52="" class="container-fluid bg-dark my-0 py-3 text-light"><p _ngcontent-serverapp-c52="" class="mb-0 text-center">Copyright © 2021-2022 idesign</p></footer>
 
 
 <body>
