--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
             aria-expanded="false">
-            Content
+            More
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Characters</a></li>
-            <li><a class="dropdown-item" href="#">Maps</a></li>
+            <li><a class="dropdown-item" href="#">Color Calibration</a></li>
+            <li><a class="dropdown-item" href="#">Frame hold</a></li>
             <li>
               <hr class="dropdown-divider">
             </li>
-            <li><a class="dropdown-item" href="#">Tutorials</a></li>
+            <li><a class="dropdown-item" href="#">Rendering direction</a></li>
           </ul>
         </li>
       </ul>
