--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
 <div class="container my-4">
     <div class="row featurette d-flex justify-content-center align-items-center">
         <div class="col-md-7 order-md-2">
-            <h2 class="featurette-heading">It all started with iDesign's idea. <span class="text-muted">Adobe After Effects is a digital visual effects, motion graphics, and compositing application developed by Adobe Systems and used in the post-production process of film making, video games and television production. </span></h2>
+            <h2 class="featurette-heading">It all started with iDesign's idea. <span class="text-muted">Adobe After Effects is a digital visual effects, motion graphics, and compositing application.</span></h2>
             <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose
                 here.</p>
         </div>
