--- a/about.html
+++ b/about.html
@@ -73,8 +73,7 @@
 
     <div class="row featurette d-flex justify-content-center align-items-center">
         <div class="col-md-7">
-            <h2 class="featurette-heading">We started iDesign in 2020. <span class="text-muted">It’ll blow your
-                    mind.</span></h2>
+            <h2 class="featurette-heading">>It all started with iDesign's idea.<span class="text-muted">Adobe After Effects is a digital visual effects, motion graphics, and compositing application</span></h2>
             <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose
                 here.</p>
         </div>
@@ -87,8 +86,7 @@
 
     <div class="row featurette d-flex justify-content-center align-items-center">
         <div class="col-md-7 order-md-2">
-            <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow your
-                    mind.</span></h2>
+            <h2 class="featurette-heading">First featurette heading. <span class="text-muted"></span></h2>
             <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose
                 here.</p>
         </div>
