--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
 
     <div class="row featurette d-flex justify-content-center align-items-center">
         <div class="col-md-7">
-            <h2 class="featurette-heading">>It all started with iDesign's idea.<span class="text-muted">Adobe After Effects is a digital visual effects, motion graphics, and compositing application</span></h2>
+            <h2 class="featurette-heading">It all started with iDesign's idea.<span class="text-muted">Adobe After Effects is a digital visual effects, motion graphics, and compositing application</span></h2>
             <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose
                 here.</p>
         </div>
